--- a/Bad Drivers/Bad Drivers.vcxproj
+++ b/Bad Drivers/Bad Drivers.vcxproj
@@ -117,6 +117,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="agent.cpp" />
     <ClCompile Include="environment.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
@@ -128,6 +129,7 @@
     <ClCompile Include="vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="agent.h" />
     <ClInclude Include="environment.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="imconfig.h" />
