--- a/Bad Drivers/Bad Drivers.vcxproj.filters
+++ b/Bad Drivers/Bad Drivers.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="environment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="agent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui_internal.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="environment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="agent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
